--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 digits_database/SavedModels/Datasets/combined_database filter=lfs diff=lfs merge=lfs -text
 digits_database/SavedModels/Datasets/combined_database_reduced filter=lfs diff=lfs merge=lfs -text
+digits_database/SavedModels/Datasets/Custom_database filter=lfs diff=lfs merge=lfs -text
